Add views and urls

--- a/templates/recoflix/base.html
+++ b/templates/recoflix/base.html
@@ -49,7 +49,7 @@
 
                 <form class="navbar-form" action="/movies/search/">
                     <div class="form-group" style="display:inline;">
-                        <input type="text" class="form-control" placeholder="Search" name="q" style="bg-color='gray'" maxlength="40">
+                        <input type="text" class="form-control" placeholder="Search" name="q" style="background-color:gray" maxlength="40">
                         <button class="input-group-addon" style="width: 40px"><i class="glyphicon glyphicon-search" title="Search"></i></button>
                     </div>
                   </form>
