--- a/templates/recoflix/detail.html
+++ b/templates/recoflix/detail.html
@@ -1,4 +1,4 @@
-{% extends "moviegeek/base.html" %}
+{% extends "recoflix/base.html" %}
 {% block content %}
 <script>
         function get_cb_recs(movieid) {
