--- a/templates/analytics/base.html
+++ b/templates/analytics/base.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    {% load staticfiles %}
+    {% load static %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MovieGEEKs</title>
+    <title>RecoFlix</title>
 
     <!-- Bootstrap -->
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +35,7 @@
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">MovieGEEKs</a>
+                <a class="navbar-brand" href="/">RecoFlix</a>
             </div>
         </nav>
         <!-- end of top -->
